--- a/webapp/resources/public/index.html
+++ b/webapp/resources/public/index.html
@@ -4,7 +4,7 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="contacts"></div>
+<div id="registry"></div>
 <script src="js/compiled/webapp.js" type="text/javascript"></script>
 </body>
 </html>
