Higher order component interaction.

--- a/webapp/resources/public/index.html
+++ b/webapp/resources/public/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <div id="registry"></div>
+<div id="classes"></div>
 <script src="js/compiled/webapp.js" type="text/javascript"></script>
 </body>
 </html>
