organize project structure, and prepare for om intermediate tutorial.

--- a/webapp/resources/public/index.html
+++ b/webapp/resources/public/index.html
@@ -6,6 +6,6 @@
 <body>
 <div id="registry"></div>
 <div id="classes"></div>
-<script src="js/compiled/webapp.js" type="text/javascript"></script>
+<script src="js/webapp.min.js" type="text/javascript"></script>
 </body>
 </html>
