--- a/webapp/resources/public/index.html
+++ b/webapp/resources/public/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="css/vendor/semantic.min.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="registry"></div>
-<div id="classes"></div>
+<div class="ui page grid">
+  <div class="row">
+    <div class="column">
+      <div class="ui message main">
+        <h1 class="ui header">All Registered Users</h1>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="column align center">
+      <div id="registry"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="column">
+      <div id="classes"></div>
+    </div>
+  </div>
+</div>
 <script src="js/webapp.min.js" type="text/javascript"></script>
 </body>
 </html>
